Revision history for Perl extension Encode::ZapCP1252

0.13
      - Added `local` to examples of changing the maping tables.

0.12  2008-06-23T17:48:04
      - Fixed pasto in the "Support" section of the docs.
      - Fixed a typo in the "Synopsis" section of the docs, thaks to David
        Beaudet.
      - Fixed the 5.6.2 requirement to be properly detected in Perl 5.5.
        Thanks to Slaven Rezic for the report.

0.11  2008-05-03T21:33:40
      - Removed bogus test.out file from the distribution. No idea how that
        got in there.
      - Added Module::Build to `build_requires` in Build.PL.
      - Fixed another Perl 5.6.2 test failure reported by David Cantrell.
      - Added Encode to the `recommends` parameter in Build.PL.

0.10  2008-05-02T18:32:27
      - Added `fix_cp1252()`, which converts CP1252 gremlins to their UTF-8
        equivalents.
      - Made the character mapping hashes into `our` variables, instead of
        lexicals, so that they can be messed with externally. Suggested by
        Max Maischen.
      - Added link to source code repository.
      - Now requiring Perl 5.6.2 or greater.

0.02  2008-05-02T04:50:04
      - Fixed documentation typo.
      - Added the "configure_requires", and "recommends" parameters to
        Build.PL.
      - Fixed compatibility issue with Perl 5.6.2.

0.01  2005-10-04T23:20:26
      - Initial public release.